--- a/Assets/Resources/Language/menusLang.xml
+++ b/Assets/Resources/Language/menusLang.xml
@@ -7,7 +7,7 @@
 		<string name="start_game">Iniciar jogo</string>
 		<string name="continue">Continuar</string>
 		<string name="reload">Recarregar</string>
-		<string name="main_menu">Menu principal</string>
+		<string name="main_menu">Voltar ao menu principal</string>
 		<string name="settings">Configurações</string>
 		<string name="cancel">Cancelar</string>
 		<string name="confirm">Confirmar</string>
@@ -18,6 +18,7 @@
 		<string name="bgm_volume">Música de fundo</string>
 		<string name="fx_volume">Efeitos sonoros</string>
 		<string name="v_sync">Sincronização vertical</string>
+		<string name="resume">Continuar</string>
 		<string name="confirm_new_game">Um jogo salvo foi encontrado. Deseja carregá-lo ou iniciar um novo jogo?
 		
 		O estado salvo será apagado caso inicie um novo jogo.</string>
@@ -30,7 +31,7 @@
 		<string name="start_game">Start game</string>
 		<string name="continue">Continue</string>
 		<string name="reload">Reload</string>
-		<string name="main_menu">Main menu</string>
+		<string name="main_menu">Return to main menu</string>
 		<string name="settings">Settings</string>
 		<string name="cancel">Cancel</string>
 		<string name="confirm">Confirm</string>
@@ -41,6 +42,7 @@
 		<string name="bgm_volume">BGM Sound Volume</string>
 		<string name="fx_volume">FX Sound Volume</string>
 		<string name="v_sync">VSync</string>
+		<string name="resume">Resume</string>
 		<string name="confirm_new_game">blah blah blah blah</string>
 	</English>
 
@@ -62,6 +64,7 @@
 		<string name="bgm_volume">バックグラウンドミュージックの音量</string>
 		<string name="fx_volume">効果音の音量</string>
 		<string name="v_sync">垂直同期</string>
+		<string name="resume">再開する</string>
 		<string name="confirm_new_game">ああああああああああああ</string>
 	</Japanese>
 </languages>
