--- a/Assets/Resources/Language/historyLang.xml
+++ b/Assets/Resources/Language/historyLang.xml
@@ -19,11 +19,11 @@
 	</English>
 
 	<Japanese>
-		<string name="page1">翻訳なし</string>
-		<string name="page2">翻訳なし</string>
-		<string name="page3">翻訳なし</string>
-		<string name="page4">翻訳なし</string>
-		<string name="page5">翻訳なし</string>
-		<string name="page6">翻訳なし</string>
+		<string name="page1">私が着た唯一のマスクはその日に落ちましたが、2つの新しいマスクが配置されました。 それ以来、私は決して同じではありません。</string>
+		<string name="page2">私はもうそれらを見たくない。 一人にしてください。</string>
+		<string name="page3">あなたはそれを得ることはできません、まだ間違って行くことができます。 ちょうど時間の無駄。</string>
+		<string name="page4">後退はありません。</string>
+		<string name="page5">ここに来ることは何も意味しません、秋だけが大きくなります。</string>
+		<string name="page6">そしていま？ 終わりではなく、始まりです。</string>
 	</Japanese>
 </languages>
